'inseriti grafici hardware e software'

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -121,4 +121,5 @@
   {% include matomo.html %}
   {% endif %}
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.1.2/mermaid.min.js"></script>
 </head>
